# ROI_Power_Flow_Sample

./: Case Study.html  ECP GSS.html  Hourly Timeseries Simulation.html  Power Flow and Contingency Outline.html  Power Flow and Contingency Sample.html  Power Flow and Contingency Sample.ipynb  Sample Test Cases.html  Sources.html  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: Case Study.ipynb  ECP GSS.ipynb  Hourly Timeseries Simulation.ipynb  Power Flow and Contingency Outline.ipynb  Power Flow and Contingency Sample.ipynb  Sample Test Cases.ipynb  Sources.ipynb  intro.md
myfirstbook/: Case Study.ipynb  ECP GSS.ipynb  Full_Year_hourly_sample_week.csv  Hourly Timeseries Simulation.ipynb  Power Flow and Contingency 01052025.ipynb  Power Flow and Contingency Outline.ipynb  Power Flow and Contingency Sample.ipynb  Sample Test Cases.ipynb  _config.yml  _toc.yml  bus_data.csv  bus_lodf_aggregator_June_Sept.csv  bus_lodf_aggregator_without_DC.xlsx  generator_data.csv  global_agg_final_ECP_251_2031.csv  global_agg_final_ECP_251_2031_spilled.csv  global_agg_final_Jan_Nov19_2031.csv  global_contingency_agg_final_ECP_251_2031.csv  global_contingency_agg_final_ECP_251_2031_spilled.csv  global_contingency_agg_final_Jan_Nov19_2031.csv  global_contingency_aggregator_June_Sept.csv  intro.md  line_data.csv  load_data_SP2031.csv  load_data_WP2031.csv  panda_hourly_dispatch_26022025.py  panda_timeseries_12052025_matrix_worstcasecont.py  panda_timeseries_23052025_matrix_worstcasecont.py  (+2 more)
(+56 files in other folders)
