[tool.poetry]
name = "roi-power-flow-sample"
version = "0.1.0"
description = ""
authors = ["cgerten <130286212+cgerten@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.2"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
polars = "^1.6.0"
altair = "^5.4.1"
plotly = "^5.24.0"
ghp-import = "^2.1.0"
vega-datasets = "^0.9.0"
ipywidgets = "^8.1.5"
ipysheet = "^0.7.0"
notebook = "^7.3.3"
numba = "^0.61.2"
pandapower = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
